live-demo/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hermes-demo
  labels:
    app: hermes-simulation
