live-demo/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-simulation
  namespace: hermes-demo
  labels:
    app: hermes-simulation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hermes-simulation
  template:
    metadata:
      labels:
        app: hermes-simulation
    spec:
      containers:
        - name: hermes-simulation
          image: quay.io/rhn_support_ipetrova/hermes-simulation:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
